@@ -1689,13 +1689,8 @@ GNOME -> GNOME developers home page</programlisting>
 	<sect2 id="identifying-secure-sites">
 	  <title>Identifying Secure Sites</title>
 	  <para>
-		When viewing web pages, &fr; displays a padlock icon 
-		which shows you whether the current site is secure. When the 
-		statusbar is visible, this icon will appear there, otherwise it
-		will be shown in the right-hand side of the address entry. In 
-		Fullscreen mode when the toolbar is hidden, the lock icon 
-		will be shown in the top right corner of the window on secure 
-		sites.
+		When viewing web pages, &fr; displays a padlock icon in the
+		statusbar which shows you whether the current site is secure. 
 	  </para>
 	  <variablelist>
 		<varlistentry>
@@ -1725,8 +1720,8 @@ GNOME -> GNOME developers home page</programlisting>
 		</varlistentry>
 	  </variablelist>
 	  <para>
-	  In addition, &fr; displays the address entry using a yellow background 
-	  to show you that the current site is secure.
+		For secure sites, there is an additional locked padlock icon in the address
+		entry, and the address entry has a different background color.
 	  </para>
 	</sect2>
 	<sect2 id="using-certificate-viewer">
