@@ -1,3 +1,12 @@
+2007-06-07  Diego Escalante Urrelo  <diegoe@gnome.org>
+
+	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
+	* help/C/epiphany.xml:
+
+	Modified first-time dialog when visiting a secure page, to mention
+	the color and padlock icon in the address entry. 
+	Patch by Jared Moore. Fixes bug #346243.
+
 2007-06-16  Christian Persch  <chpe@gnome.org>
 
 	* doc/Makefile.am:
